--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html {
     background-color: darkslategrey;
 }
 
-
 #searchButton {
     background-color: black;
     color: white;
@@ -10,21 +9,23 @@ html {
 
 /* The switch - the box around the slider */
 .switch {
-    position: relative;
+    position: absolute;
     display: inline-block;
+    right: 50px;
+    top: 50px;
     width: 60px;
     height: 34px;
-  }
+}
   
   /* Hide default HTML checkbox */
-  .switch input {
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
+}
   
   /* The slider */
-  .slider {
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -35,9 +36,9 @@ html {
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 34px;
-  }
+}
   
-  .slider:before {
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -48,18 +49,74 @@ html {
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 50%;
-  }
+}
   
-  input:checked + .slider {
+input:checked + .slider {
     background-color: #2196F3;
-  }
+}
   
-  input:focus + .slider {
+input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
-  }
+}
   
-  input:checked + .slider:before {
+input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
+}
+
+h1 {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+h4 {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
+
+#countryDiv {
+    border-bottom: 3px solid white;
+}
+
+#tempDiv {
+    display: grid;
+    grid-template-rows: 20px auto;
+    grid-template-columns: auto auto auto auto auto auto;
+}
+
+.info {
+    margin-top: 10px;
+}
+
+#searchBar {
+    outline: none;
+    border: 3px solid gray;
+    border-radius: 30px;
+    background-color: gray;
+    color: white;
+    width: 200px;
+    height: 25px;
+    z-index: 0;
+}
+
+#searchButton {
+    position: absolute;
+    top: 12px;
+    left: 158px;
+    z-index: 1;
+    border-radius: 30px;
+    outline: none;
+    height: 25px;
+}
+
+#searchButton:hover {
+    transition: ease 1s;
+    background-color: white;
+    color: black;
+}
